增加了新手易犯错误页面
新手易犯的三个错误

--- a/04_div_float.html
+++ b/04_div_float.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-	<title>DIV——float控制</title>
+	<title>04_DIV——float控制</title>
 	<style>
 		#container{
 			width: 1000px;
