--- a/04_div_float.html
+++ b/04_div_float.html
@@ -24,6 +24,13 @@
 			height: 500px;
 			background: pink;
 		}
+		.four{
+			width: 320px;
+			height: 230px;
+			background: black;
+			margin: 10px;
+			float: left;
+		}
 		#rside{
 			float: right;
 			width: 300px;
@@ -43,7 +50,12 @@
 	<div id='container'>
 		<div id='header'></div>
 		<div id='main'>
-			<div id='lside'></div>
+			<div id='lside'>
+				<div class="four"></div>
+				<div class="four"></div>
+				<div class="four"></div>
+				<div class="four"></div>
+			</div>
 			<div id='rside'></div>
 		</div>
 		<div id='footer'></div>
