调了调代码位置

--- a/07_triangle.html
+++ b/07_triangle.html
@@ -66,9 +66,12 @@
 <body>
 	<div class="tree">
 	    <div class="wood"></div>
-	    <div class=c1></div><div class=c2></div>
-	    <div class=b1></div><div class=b2></div>
-	    <div class="a1"></div><div class="a2"></div>
+	    <div class=c1></div>
+	    <div class=c2></div>
+	    <div class=b1></div>
+	    <div class=b2></div>
+	    <div class="a1"></div>
+	    <div class="a2"></div>
 	</div>
 </body>
 </html>
