--- a/07_triangle.html
+++ b/07_triangle.html
@@ -19,7 +19,7 @@
 	    .tree .wood{ 
 	    	width: 20px; 
 	    	height: 50px; 
-	    	background-color:grey; 
+	    	background-color:gray; 
 	    	left: 50%; 
 	    	margin-left: -10px; 
 	    	top: 170px;}
